@@ -1,3 +1,8 @@
+2018-05-15  Andreas Schwab  <schwab@suse.de>
+
+	* riscv_init.c (riscv_init): Hook check_special_symbol.
+	* riscv_symbol.c (riscv_check_special_symbol): New function.
+
 2018-04-19  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.am (modules): Add riscv.
